# Azure-MultiModal-Compilance-Ingestion-Engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy_aws.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  railway.json
ComplianceQAPipeline/: cookies.txt  main.py  pyproject.toml
ComplianceQAPipeline/backend/scripts/: index_documents.py
ComplianceQAPipeline/backend/src/api/: server.py  telemetry.py
ComplianceQAPipeline/backend/src/graph/: nodes.py  state.py  tools.py  workflow.py
ComplianceQAPipeline/backend/src/services/: video_indexer.py
ComplianceQAPipeline/frontend/: app.js  index.html  styles.css
copilot/: .workspace
copilot/api/: manifest.yml
copilot/api/addons/: api-secrets.yml
copilot/redis/: manifest.yml
redis_svc/: Dockerfile
